<resources>
    <string name="app_name">Simple and Sinister Timer</string>
    <string name="one_to_one_ratio_title">One to One Ratio</string>
    <string name="one_to_one_subtitle">Work to rest ratio is the same.</string>
    <string name="one_to_one_start_button">Start Timer</string>
    <string name="pause_one_to_one">Pause</string>
    <string name="stop_one_to_one">Stop</string>
    <string name="start_one_to_one">Start</string>
    <string name="start_timer_button_one_to_one">Start Timer</string>
    <string name="emom_finished">Finished</string>
    <string name="countdown_text">Countdown</string>
    <string name="swing_10_text">Swing 10</string>
    <string name="rest_text">Rest</string>
    <string name="turkish_get_up_text">Turkish Get Up</string>
    <string name="complete_text">Your timer is complete</string>
    <string name="image_button_start">start_timer</string>
    <string name="image_button_pause">pause_button</string>
    <string name="main_activity_title">Select Your Timing Scheme</string>
    <string name="one_to_one_button">1 to 1 Ratio</string>
    <string name="emom_button">EMOM</string>
    <string name="one_to_two_button">1 to 2 Ratio</string>
    <string name="random_button">Random</string>
    <string name="one_to_two_ratio_title">One to Two Ratio</string>
    <string name="one_to_two_subtitle">Rest is double the work time.</string>
    <string name="start_timer_button">start_timer_button</string>
    <string name="stop_timer_button">stop_timer_button</string>
    <string name="emom_subtitle">Will complete set at the top of each minute.</string>
    <string name="emom_title">Every Minute on the Minute</string>
    <string name="test_timer_title">Test</string>
    <string name="test_timer_subtitle">100 swings in 5 minutes</string>
    <string name="test_timer_second_subtitle">1 minute rest</string>
    <string name="test_timer_third_subtitle">10 Turkish get ups in 10 minutes</string>
    <string name="test_timer_button">Test</string>
    <string name="about_app_title_text">About App</string>
    <string name="about_app_menu_text">About App</string>
</resources>