<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_overlay"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/one_to_one_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/one_to_one_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/emom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <Button
        android:id="@+id/emom_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/emom_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/one_to_two_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_to_one_button" />

    <Button
        android:id="@+id/one_to_two_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/one_to_two_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/random_timer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emom_button" />

    <Button
        android:id="@+id/random_timer_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/random_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/test_timer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_to_two_button" />

    <Button
        android:id="@+id/test_timer_button"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/test_timer_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_timer_button" />


</androidx.constraintlayout.widget.ConstraintLayout>