<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_overlay"
    android:padding="24dp"
    tools:context=".Test">

    <TextView
        android:id="@+id/test_timer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_timer_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_timer_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_timer_subtitle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_timer_title" />

    <TextView
        android:id="@+id/test_timer_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_timer_second_subtitle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_timer_subtitle" />

    <TextView
        android:id="@+id/test_timer_subtitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_timer_third_subtitle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_timer_subtitle2" />

    <TextView
        android:id="@+id/textview_countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_movement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_timer_subtitle"
        tools:text="1:00" />

    <TextView
        android:id="@+id/textview_movement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_timer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_countdown_timer"
        tools:text="Swing 10" />

    <ImageButton
        android:id="@+id/start_timer_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/sfblack"
        android:contentDescription="@string/start_timer_button"
        android:src="@drawable/ic_play_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_movement" />

    <ImageButton
        android:id="@+id/stop_timer_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/sfblack"
        android:contentDescription="@string/stop_timer_button"
        android:src="@drawable/ic_stop__24"
        app:layout_constraintBottom_toBottomOf="@id/start_timer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_timer_button"
        app:layout_constraintTop_toTopOf="@id/start_timer_button" />

</androidx.constraintlayout.widget.ConstraintLayout>